@@ -550,6 +550,7 @@ int rthal_request_linux_irq (unsigned irq,
 			     void *dev_id)
 {
     unsigned long flags;
+    int err = 0;
 
     if (irq >= IPIPE_NR_XIRQS || !handler)
 	return -EINVAL;
@@ -564,9 +565,9 @@ int rthal_request_linux_irq (unsigned irq,
 
     rthal_spin_unlock_irqrestore(flags,&irq_desc[irq].lock);
 
-    request_irq(irq,handler,SA_SHIRQ,name,dev_id);
+    err = request_irq(irq,handler,SA_SHIRQ,name,dev_id);
 
-    return 0;
+    return err;
 }
 
 int rthal_release_linux_irq (unsigned irq, void *dev_id)
